# ml4astrophysics

./: README.md  pyproject.toml
data/L15-0506E-1204N_2027_3374_13/labels_match_pix/: global_monthly_2018_01_mosaic_L15-0506E-1204N_2027_3374_13_Buildings.geojson
src/scalable_ml/: model_utilities.py  training.py
src/scalable_ml/first_exercise/: data_loading.py  ml_models.py
src/scalable_ml/second_exercise/: create_masks.py  data_loading.py  eROSITA_data.py  unet_models.py
tools/: first_exercise_pytorch_with_fmnist.py  second_exercise_unet_image_segmentation.py
